tests/ui/impl-trait/non-defining-uses/avoid-inference-constraints-from-blanket-3.stderr
error[E0277]: the trait bound `String: Trait<u32>` is not satisfied
  --> $DIR/avoid-inference-constraints-from-blanket-3.rs:22:17
   |
LL |     impls_trait(x);
   |     ----------- ^ the trait `Trait<u32>` is not implemented for `String`
   |     |
   |     required by a bound introduced by this call
   |
note: required for `String` to implement `Trait<u32>`
  --> $DIR/avoid-inference-constraints-from-blanket-3.rs:16:15
   |
LL | impl<T: Copy> Trait<u32> for T {}
   |         ----  ^^^^^^^^^^     ^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `impls_trait`
  --> $DIR/avoid-inference-constraints-from-blanket-3.rs:18:19
   |
LL | fn impls_trait<T: Trait<U>, U>(_: T) {}
   |                   ^^^^^^^^ required by this bound in `impls_trait`
help: consider borrowing here
   |
LL |     impls_trait(&x);
   |                 +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
